Add authentication endpoint

--- a/Exchange.Api/appsettings.Development.json
+++ b/Exchange.Api/appsettings.Development.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "https://localhost:5001",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  },
   "ConnectionStrings": {
     "ExchangeDbContextConnection": "Data Source=app.db"
   }
