Add currency exchange endpoint

--- a/Exchange.Api/appsettings.Development.json
+++ b/Exchange.Api/appsettings.Development.json
@@ -11,6 +11,9 @@
     "ValidIssuer": "https://localhost:5001",
     "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
   },
+  "ExchangeRatesApi": {
+    "AccessKey": "f442f0fba7792a4406d2cd58e710eb4c"
+  },
   "ConnectionStrings": {
     "ExchangeDbContextConnection": "Data Source=app.db"
   }
