Create user's conversions history endpoint

--- a/Exchange.Api/appsettings.Development.json
+++ b/Exchange.Api/appsettings.Development.json
@@ -15,6 +15,6 @@
     "AccessKey": "f442f0fba7792a4406d2cd58e710eb4c"
   },
   "ConnectionStrings": {
-    "ExchangeDbContextConnection": "Data Source=app.db"
+    "ExchangeDbContextConnection": "Data Source=dev.db"
   }
 }
