Extract interface from services and repositories

--- a/Exchange.Test/Exchange.Test.csproj
+++ b/Exchange.Test/Exchange.Test.csproj
@@ -35,6 +35,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Exchange.Api\Exchange.Api.csproj" />
       <ProjectReference Include="..\Exchange\Exchange.csproj" />
     </ItemGroup>
 
